--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ import( data.table )
 import( plotly)
 import( moments )
 import( R6 )
+import( matrixStats )
 
 # dynamic link for Rcpp
 useDynLib( EpiLine, .registration = TRUE )
